update some login object
